cmake_minimum_required(VERSION 3.26)
project(BNTU)

set(CMAKE_CXX_STANDARD 17)

add_executable(BNTU main.cpp)

add_executable(main main.cpp)
add_executable(main5 main5.cpp)

add_executable(main6 main6.cpp)

add_executable(main7 main7.cpp)

add_executable(CMakeLists CMakeLists.txt)
add_executable(main3 main3.cpp)

add_executable(main2 main2.cpp)
add_executable(main4 main4.cpp)

add_executable(main8 main8.cpp)

add_executable(main9 main9.cpp)

add_executable(main12 main12.cpp)
